Fixed problem in CSS grid visible in desktop

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -219,7 +219,7 @@ footer {
   }
   .week-square-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     margin-left: 5vh;
     margin-right: 5vh;
   }
